css/main.css
/* ... */
/* button styles */

.effect {
  display: inline-block;
  position: relative;
  text-decoration: none;
  color: #fff;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  padding: 20px 0px;
  width: 200px;
  border-radius: 6px;
  overflow: hidden;
  background: transparent;
  border-color: white;
}
.effect.effect-5 {
  -webkit-transition: all 0.2s linear 0s;
  transition: all 0.2s linear 0s;
}
.effect.effect-5:before {
  font-family: FontAwesome;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: absolute;
  top: 0;
  left: 0px;
  height: 100%;
  width: 30px;
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 0 50% 50% 0;
  -webkit-transform: scale(0, 1);
          transform: scale(0, 1);
  -webkit-transform-origin: left center;
          transform-origin: left center;
  -webkit-transition: all 0.2s linear 0s;
  transition: all 0.2s linear 0s;
}
.effect.effect-5:hover {
  text-indent: 30px;
  background: rgba(255, 255, 255, 0.1);
  cursor: pointer;
  border-color: white;
}
.effect.effect-5:hover:before {
  -webkit-transform: scale(1, 1);
          transform: scale(1, 1);
  text-indent: 0;
}

/* header styles */

.header {
    padding: 10px 0 5px 0;
    border-bottom: 1px solid rgba(255,255,255,0.1);
    margin-bottom: 50px;
}

.header h3 {
    font-weight: 100;
    font-family: 'Raleway';
    cursor: pointer;
}

/* intro styles */

#intro {
    padding: 0 50px;
}

.hero-icon {
    width: 80px;
    margin-bottom: 20px;
}

#intro p {
    font-family: 'Raleway';
    font-weight: 300px;
    font-size: 3em;
    padding: 20px;
    margin-bottom: 50px;
}

#intro .convert-btn:hover {
    background: green;
}

#intro .show-favorites:hover {
    background: #FF5800;
}

@media only screen and (max-width: 978px) {
    #intro {
        padding: 0 30px;
    }
}

@media only screen and (max-width: 684px) {
    #intro {
        padding: 0 10px;
    }

    #intro p {
        font-size: 2em;
    }
}

@media only screen and (max-width: 492px) {
    #intro p {
        font-size: 1.5em;
    }

    #intro button {
        display: block;
        margin: 0 auto;
        margin-bottom: 10px;
    }
}

.convert-btn:before {
    content: "\f155";
}

.show-favorites:before {
    content: "\f005";
}

/* conversion screen */

#conversion {
    margin-bottom: 50px;
}

#js-convert-form, #js-convert-form input, #js-convert-form select, #js-convert-form option {
    font-family: 'Source Code Pro';
    font-size: 1.2em;
}

.select2-results {
    color: black;
}

#js-convert-form input {
    color: white;
    border: none;
    border-bottom: 3px solid #c0c0c0;
    outline: none;
    background: transparent;
}

#js-convert-form input::placeholder {
    color: #c0c0c0;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

#js-convert-form input:focus {
    border-bottom: 3px solid white;
}

#favorite-btn:hover {
    background: green;
}

#results .show-favorites:hover {
    background: #FF5800;
}

/* Results screen */

#results .result-2 {
    margin-bottom: 30px;
}

.result-1 {
    margin-bottom: -5px;
}

.result-2 {
    font-size: 2em;
}

#favorite-btn:before {
    content: "\f005";
}
#favorites .convert-btn:hover {
    background: green;
}
#delete-favorites:hover {
    background: #C40233;
}
#delete-favorites:before {
    content: "\f00d";
}

